--- a/androShield/androShield/androShield.vcxproj
+++ b/androShield/androShield/androShield.vcxproj
@@ -122,6 +122,7 @@
     <ClCompile Include="ApkInfo.cpp" />
     <ClCompile Include="APKInfoExtractor.cpp" />
     <ClCompile Include="CurrentTimeString.cpp" />
+    <ClCompile Include="HttpRequestsDetector.cpp" />
     <ClCompile Include="IntentCrashesDetector.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShellExecutionProcess.cpp" />
@@ -132,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="APKInfoExtractor.h" />
     <ClInclude Include="CurrentTimeString.h" />
+    <ClInclude Include="HttpRequestsDetector.h" />
     <ClInclude Include="IntentCrashesDetector.h" />
     <ClInclude Include="ShellExecutionProcess.h" />
     <ClInclude Include="TaintAnalyser.h" />
