extended the session timeout to be 80 minutes + changes app vars to session vars in apkuploadpage

--- a/AndroShieldApp/AndroShield/Web.config
+++ b/AndroShieldApp/AndroShield/Web.config
@@ -17,6 +17,7 @@
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime maxRequestLength="1048576" executionTimeout="3600" />
     <pages controlRenderingCompatibilityVersion="4.0"/>
+    <sessionState mode="InProc" cookieless="false" timeout="80" />
   </system.web>
   <system.codedom>
     <compilers>
