--- a/androShield/androShield/androShield.vcxproj.filters
+++ b/androShield/androShield/androShield.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="HttpRequestsDetector.cpp">
       <Filter>sources</Filter>
     </ClCompile>
+    <ClCompile Include="Emulator.cpp">
+      <Filter>sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ApkInfo.h">
@@ -59,6 +62,9 @@
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="HttpRequestsDetector.h">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="Emulator.h">
       <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
